--- a/styles/styles.css
+++ b/styles/styles.css
@@ -471,18 +471,9 @@ h2 {
     display: flex;
     flex-direction: column;
   }
-  .portfolio-body .main .introduction .text-introduction .greeting-one,
-.portfolio-body .main .introduction .text-introduction .greeting-two {
-    font-size: 6rem;
-  }
-  .portfolio-body .main .introduction .text-introduction .hello-container {
-    height: 190px;
-  }
-  .portfolio-body .main .introduction .text-introduction .greeting-two {
-    height: 130px;
-  }
-  .portfolio-body .main .introduction .text-introduction .description {
-    width: auto;
+  .portfolio-body .main .introduction .text-introduction .hello-container,
+.portfolio-body .main .introduction .text-introduction .you-container {
+    display: none;
   }
   .portfolio-body .projects .project-container .project-one .project-details .project-description .project-heading,
 .portfolio-body .projects .project-container .project-one .portfolio-body .projects .project-container .project-two .project-details .project-description .project-heading,
