fix styling and add one more section for chrome plugin project

--- a/styles/license.scss
+++ b/styles/license.scss
@@ -7,9 +7,9 @@
     .license-header {
         font-size: 38px;
         line-height: 44px;
-        //-top: 20px;
     }
     .license-details {
+        margin-top: 50px;
         margin-bottom: 30px;
         padding: 15px;
         border-style: solid;
